--- a/CSS/header.css
+++ b/CSS/header.css
@@ -20,8 +20,12 @@ margin-bottom:15px ;
 /*icon retour a la page acceuil*/
 .retour_page{
 position:absolute;
+display: flex;
+justify-content: space-between;
+align-items: center;
 top:25px;
-left:16px;
+margin-left:5px ;
+
 }
 main{
 padding: 0;
